--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,23 @@ aiosignal==1.3.1
 altair==5.1.1
 annotated-types==0.5.0
 anyio==3.7.1
+appnope==0.1.3
+asttokens==2.4.0
 async-timeout==4.0.3
 attrs==23.1.0
+backcall==0.2.0
 backoff==2.2.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 cohere==4.27
+comm==0.1.4
 contourpy==1.1.1
 cycler==0.11.0
+debugpy==1.8.0
+decorator==5.1.1
 exceptiongroup==1.1.3
+executing==1.2.0
 fastapi==0.103.1
 fastavro==1.8.2
 ffmpy==0.3.1
@@ -30,45 +37,70 @@ huggingface-hub==0.17.2
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
+inflection==0.5.1
+ipykernel==6.25.2
+ipython==8.15.0
+jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+jupyter_client==8.3.1
+jupyter_core==5.3.1
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+matplotlib-inline==0.1.6
 multidict==6.0.4
+nest-asyncio==1.5.8
 nltk==3.8.1
 numpy==1.26.0
 orjson==3.9.7
 packaging==23.1
 pandas==2.1.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==10.0.1
+platformdirs==3.10.0
+profanity-check==1.0.3
+profanityfilter==2.0.6
+prompt-toolkit==3.0.39
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.3.0
 pydantic_core==2.6.3
 pydub==0.25.1
+Pygments==2.16.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
+pyzmq==25.1.1
 referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
 rpds-py==0.10.3
 scikit-learn==1.3.1
 scipy==1.11.2
+seaborn==0.12.2
 semantic-version==2.10.0
 six==1.16.0
 sniffio==1.3.0
+stack-data==0.6.2
 starlette==0.27.0
 threadpoolctl==3.2.0
 toolz==0.12.0
+tornado==6.3.3
 tqdm==4.66.1
+traitlets==5.10.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.5
 uvicorn==0.23.2
+wcwidth==0.2.6
 websockets==11.0.3
 yarl==1.9.2
 zipp==3.17.0
