--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ async-timeout==4.0.3
 attrs==23.1.0
 backcall==0.2.0
 backoff==2.2.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -17,6 +19,7 @@ cohere==4.27
 comm==0.1.4
 contourpy==1.1.1
 cycler==0.11.0
+dacite==1.8.1
 debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.1.3
@@ -31,10 +34,12 @@ fsspec==2023.9.1
 gradio==3.44.4
 gradio_client==0.5.1
 h11==0.14.0
+htmlmin==0.1.12
 httpcore==0.18.0
 httpx==0.25.0
 huggingface-hub==0.17.2
 idna==3.4
+ImageHash==4.3.1
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
 inflection==0.5.1
@@ -48,18 +53,24 @@ jsonschema-specifications==2023.7.1
 jupyter_client==8.3.1
 jupyter_core==5.3.1
 kiwisolver==1.4.5
+llvmlite==0.42.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
 multidict==6.0.4
+multimethod==1.11.2
 nest-asyncio==1.5.8
+networkx==3.2.1
 nltk==3.8.1
+numba==0.59.1
 numpy==1.26.0
 orjson==3.9.7
 packaging==23.1
 pandas==2.1.1
 parso==0.8.3
+patsy==0.5.6
 pexpect==4.8.0
+phik==0.12.4
 pickleshare==0.7.5
 Pillow==10.0.1
 platformdirs==3.10.0
@@ -77,6 +88,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3.post1
+PyWavelets==1.5.0
 PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.30.2
@@ -89,18 +101,24 @@ seaborn==0.12.2
 semantic-version==2.10.0
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.5
 stack-data==0.6.2
 starlette==0.27.0
+statsmodels==0.14.1
 threadpoolctl==3.2.0
 toolz==0.12.0
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.10.0
+typeguard==4.1.5
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.5
 uvicorn==0.23.2
+visions==0.7.6
 wcwidth==0.2.6
 websockets==11.0.3
+wordcloud==1.9.3
 yarl==1.9.2
+ydata-profiling==4.7.0
 zipp==3.17.0
