--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ importlib-resources==6.1.0
 inflection==0.5.1
 ipykernel==6.25.2
 ipython==8.15.0
+ipywidgets==8.1.2
 jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
@@ -52,6 +53,7 @@ jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 jupyter_client==8.3.1
 jupyter_core==5.3.1
+jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
 llvmlite==0.42.0
 MarkupSafe==2.1.3
@@ -118,6 +120,7 @@ uvicorn==0.23.2
 visions==0.7.6
 wcwidth==0.2.6
 websockets==11.0.3
+widgetsnbextension==4.0.10
 wordcloud==1.9.3
 yarl==1.9.2
 ydata-profiling==4.7.0
